BuildPartsCatalog: Makefile optimization

--- a/BuildPartsCatalog/Makefile
+++ b/BuildPartsCatalog/Makefile
@@ -9,24 +9,22 @@ RMDIR = rm -rf
 MAKEDEPEND = gcc -MM
 
 ifeq ("$(LIB_PNG)","")
-
 LIB_PNG=png
-
 endif
 
 ifeq ($(shell if $(CC) -v --help 2>&1| grep -q c++11 ; then echo OK; fi), OK)
 	TESTING+=-DUSE_CPP11
 endif
 
-LDLIBDIRS = -L../../TCFoundation -L../../LDLoader -L../../LDLib
-LIBDIRS = $(LDLIBDIRS) -L/usr/X11R6/lib
+LDLIBDIRS = -L../../TCFoundation -L../../LDLoader
+LIBDIRS = $(LDLIBDIRS)
 LIBS = -lLDLoader$(POSTFIX) -lTCFoundation$(POSTFIX) -l$(LIB_PNG) -lz -ljpeg -lminizip
 STATIC =
 ARCH32 =
 LDLIBS = ../TCFoundation/libTCFoundation$(POSTFIX).a ../LDLoader/libLDLoader$(POSTFIX).a
 MAKEMODE = POSTFIX=-osmesa USE_BOOST=NO TESTING="$(TESTING)"
 
-CFLAGS = -o $(OBJDIR)/$*.o $(TESTING) -Wall -D_GNU_SOURCE -O3 $(EXPORT_3DS) -DHAVE_MINIZIP
+CFLAGS = -o $(OBJDIR)/$*.o $(TESTING) -Wall -D_GNU_SOURCE -O3 -DHAVE_MINIZIP
 
 ifeq ("$(USE_CPP11)","YES")
 
@@ -34,10 +32,7 @@ CFLAGS += -DUSE_CPP11 -std=c++11
 LIBS   += -lpthread
 endif
 
-CSRCS = $(wildcard *.c)
-CCSRCS = AlertHandler.cpp  Consts.cpp  main.cpp  PartsCatalog.cpp
-
-BASEDIR=$(realpath $(shell if test -d 3rdParty ; then pwd ; else if test -d ../3rdParty ; then echo .. ;fi;fi))
+CCSRCS = $(wildcard *.cpp)
 
 ifeq ($(shell uname -s), Darwin)
 CFLAGS += 
@@ -48,7 +43,7 @@ else
 AR = ar rcs
 endif
 
-INCLUDE = -I.. -I../include #-I../3rdParty
+INCLUDE = -I.. -I../include
 
 ifeq ($(shell uname), FreeBSD)
 INCLUDE += -I/usr/local/include
@@ -59,19 +54,14 @@ OBJDIR = .obj$(POSTFIX)
 
 VPATH = $(OBJDIR)
 
-SRCS = $(CSRCS) $(CCSRCS)
-COBJS = $(CSRCS:.c=.o)
 CCOBJS = $(CCSRCS:.cpp=.o)
-OBJS = $(COBJS) $(CCOBJS)
+OBJS = $(CCOBJS)
 
 .SUFFIXES:
 
-.SUFFIXES:  .cpp .o .c
+.SUFFIXES:  .cpp .o
 
 .cpp.o:
-	$(CC) $(CFLAGS) $(INCLUDE) $(CFLAGSLOC) -c $<
-
-.c.o:
 	$(CC) $(CFLAGS) $(INCLUDE) $(CFLAGSLOC) -c $<
 
 debug: CFLAGSLOC = -g
