UnMirrorStuds: fix compilation/link errors

--- a/UnMirrorStuds/UnMirrorStuds.vcxproj
+++ b/UnMirrorStuds/UnMirrorStuds.vcxproj
@@ -119,7 +119,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vc2005d.lib;libpng-vc2005d.lib;zlibd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vs2017.lib;libpng16-vs2017.lib;zlib-vs2017.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Debug/UnMirrorStuds.exe</OutputFile>
       <AdditionalLibraryDirectories>..\lib;.\boost\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreSpecificDefaultLibraries>libcmt.lib;libc.lib;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
@@ -159,7 +159,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vc2005.lib;libpng-vc2005.lib;zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vs2017.lib;libpng16-vs2017.lib;zlib-vs2017.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Release/UnMirrorStuds.exe</OutputFile>
       <AdditionalLibraryDirectories>..\lib;..\boost\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -199,8 +199,9 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vs2019.lib;libpng16-vs2019.lib;zlib-vs2019.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Debug/UnMirrorStuds.exe</OutputFile>
+      <AdditionalLibraryDirectories>..\lib\x64;..\boost\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>.\Debug/UnMirrorStuds.pdb</ProgramDatabaseFile>
@@ -239,8 +240,9 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vs2019.lib;libpng16-vs2019.lib;zlib-vs2019.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Release/UnMirrorStuds.exe</OutputFile>
+      <AdditionalLibraryDirectories>..\lib\x64;..\boost\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <ProgramDatabaseFile>.\Release/UnMirrorStuds.pdb</ProgramDatabaseFile>
       <SubSystem>Console</SubSystem>
