UnMirrorStuds: fix link errors

--- a/UnMirrorStuds/UnMirrorStuds.vcxproj
+++ b/UnMirrorStuds/UnMirrorStuds.vcxproj
@@ -119,7 +119,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vs2017.lib;libpng16-vs2017.lib;zlib-vs2017.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vs2017.lib;libpng16-vs2017.lib;zlib-vs2017.lib;ws2_32.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Debug/UnMirrorStuds.exe</OutputFile>
       <AdditionalLibraryDirectories>..\lib;.\boost\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreSpecificDefaultLibraries>libcmt.lib;libc.lib;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
@@ -159,7 +159,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vs2017.lib;libpng16-vs2017.lib;zlib-vs2017.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vs2017.lib;libpng16-vs2017.lib;zlib-vs2017.lib;ws2_32.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Release/UnMirrorStuds.exe</OutputFile>
       <AdditionalLibraryDirectories>..\lib;..\boost\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -199,7 +199,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vs2019.lib;libpng16-vs2019.lib;zlib-vs2019.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vs2019.lib;libpng16-vs2019.lib;zlib-vs2019.lib;ws2_32.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Debug/UnMirrorStuds.exe</OutputFile>
       <AdditionalLibraryDirectories>..\lib\x64;..\boost\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -240,7 +240,7 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vs2019.lib;libpng16-vs2019.lib;zlib-vs2019.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;libjpeg-vs2019.lib;libpng16-vs2019.lib;zlib-vs2019.lib;ws2_32.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Release/UnMirrorStuds.exe</OutputFile>
       <AdditionalLibraryDirectories>..\lib\x64;..\boost\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SuppressStartupBanner>true</SuppressStartupBanner>
