--- a/LDViewMessages.ini
+++ b/LDViewMessages.ini
@@ -98,6 +98,13 @@ BrowseForSnapshotDir =Please select the directory to save snapshots into.
 BrowseForPartsListDir =Please select the directory to save parts lists into.
 BrowseForExportDir =Please select the directory to save exports into.
 
+; Stud logo geometry
+Plain =0 Plain
+SingleWire =1 Single Wire   
+DoubleWire =2 Double Wire   
+RaisedFlat =3 Raised Flat   
+RaisedRounded =4 Raised Rounded
+SubtleRounded =5 Subtle Rounded
 
 ; ** LDViewWindow **
 
