--- a/LDViewMessages.ini
+++ b/LDViewMessages.ini
@@ -98,7 +98,7 @@ BrowseForSnapshotDir =Please select the directory to save snapshots into.
 BrowseForPartsListDir =Please select the directory to save parts lists into.
 BrowseForExportDir =Please select the directory to save exports into.
 
-; Stud logo geometry
+; Stud style geometry
 Plain =0 Plain
 SingleWire =1 Single Wire   
 DoubleWire =2 Double Wire   
