Setup stud style and automate edge line color

--- a/LDViewMessages.ini
+++ b/LDViewMessages.ini
@@ -105,6 +105,8 @@ DoubleWire =2 Double Wire
 RaisedFlat =3 Raised Flat   
 RaisedRounded =4 Raised Rounded
 SubtleRounded =5 Subtle Rounded
+HighContrast =6 High Contrast Plain
+HighContrastSingleWire =7 High Contrast Single Wire
 
 ; ** LDViewWindow **
 
