--- a/OSMesa/Makefile
+++ b/OSMesa/Makefile
@@ -286,7 +286,7 @@ test: all
 		done                                            \
 	fi
 
-install: ldview
+install: all
 	install -D -m 755 ldview $(PREFIX)/usr/bin/ldview
 	install -D -m 644 ldview.1 $(PREFIX)/usr/share/man/man1/ldview.1
 	gzip -9f $(PREFIX)/usr/share/man/man1/ldview.1
