--- a/QT/docker/Dockerfile-appimage
+++ b/QT/docker/Dockerfile-appimage
@@ -1,6 +1,6 @@
-FROM opensuse/leap:15.1
+FROM opensuse/leap:15.2
 MAINTAINER Peter Bartfai pbartfai@stardust.hu
-RUN zypper --non-interactive install git rpm-build rpmlint libqt5-qtbase-devel libqt5-linguist zlib-devel libpng16-compat-devel libjpeg8-devel wget glu-devel gl2ps-devel tinyxml-devel
+RUN zypper --non-interactive install git rpm-build rpmlint libqt5-qtbase-devel libqt5-linguist zlib-devel libpng16-compat-devel libjpeg8-devel wget glu-devel gl2ps-devel tinyxml-devel minizip-devel
 VOLUME /mnt/lego
 RUN git clone https://github.com/tcobbs/ldview
 CMD cd ldview/QT ; \
