Disable LDView32 build step in release.yml [skip ci]
Comment out the LDView32 build step in release workflow.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,11 @@ jobs:
       - name: Build LDView
         shell: cmd
         run: .\build.cmd
+#      - name: Build LDView32
+#        shell: cmd
+#        run: |
+#          msbuild LDView.vcxproj /p:Configuration=Release /p:Platform=win32
+#          "c:\Program Files (x86)\Inno Setup 6\ISCC.exe" LDView.iss
       - name: Upload Setup
         env:
           GH_TOKEN: ${{ github.token }}
