AlpineLinux fix [skip ci]
Added the -D_POSIX_C_SOURCE definition to make commands.

--- a/QT/APKBUILD
+++ b/QT/APKBUILD
@@ -23,7 +23,7 @@ build() {
   elif [ -x /usr/bin/qmake-qt5 ] ; then qmake-qt5 -spec $PLATFORM  ; fi
   if   [ -x /usr/bin/lrelease     ] ; then lrelease     LDView.pro ;
   elif [ -x /usr/bin/lrelease-qt5 ] ; then lrelease-qt5 LDView.pro ; fi
-  make "TESTING=-I ../3rdParty/gl2ps"
+  make "TESTING=-I ../3rdParty/gl2ps -D_POSIX_C_SOURCE"
   cd kde5
   if [ -d build ]; then rm -rf build ; fi
   mkdir -p build
@@ -32,7 +32,7 @@ build() {
     make
   fi
   cd ../../../OSMesa
-  make
+  make TESTING=-D_POSIX_C_SOURCE
 }
  
 package() {
