Implement cleanup for old draft releases [skip ci]
Add cleanup step to remove old draft releases.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -191,3 +191,24 @@ jobs:
           GH_TOKEN: ${{ github.token }}
           GH_REPO: ${{ github.repository }}
         run:  gh release upload "${{ needs.release.outputs.tag }}" MacOSX/LDView/distrib/LDView*.dmg
+  cleanup:
+    if: github.event_name != 'push'
+    needs:
+      - build-windows
+      - build-ubuntu
+      - build-fedora
+      - build-alpine
+      - build-debian
+      - build-appimage
+      - build-arch
+      - build-mac
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Remove old releases
+        env:
+          GH_TOKEN: ${{ github.token }}
+          GH_REPO: ${{ github.repository }}  
+        run: |
+          gh release list | grep Draft|cut -f1|grep -E v[0-9]{8}.[0-9]{6}|sort -n
