--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,22 +17,31 @@ jobs:
     - name: Set tag name
       id: tag
       run: |
-        if [[ "${{ github.event_name }}" != "push" ]]; then
+        if [[ "${{ github.event_name }}" = "schedule" ]]; then
           tag=v$(date +%Y-%m-%d.%H:%M:%S)
-        else
-          tag=$(basename "${{ github.ref }}")
+        elif [[ "${{ github.event_name }}" = "push" ]]; then
+          if [[ $(basename "${{ github.ref }}" | cut -c1) = v ]] ; then
+            tag=$(basename "${{ github.ref }}")
+          fi
         fi
         echo "tag=$tag" >> $GITHUB_OUTPUT
     - name: Create Release
+      if: steps.tag.outputs.tag != ''
       env:
         GH_TOKEN: ${{ github.token }}
         GH_REPO: ${{ github.repository }}
       run: |
         ver=$(echo ${{ steps.tag.outputs.tag }} | cut -c2-)
-        if [[ "${{ github.event_name }}" != "push" ]]; then
-          gh release create --draft "${{ steps.tag.outputs.tag }}" --title "LDView Snapshot $ver"
-        else
-          gh release create --draft "${{ steps.tag.outputs.tag }}" --title "LDView $ver"
+        if [[ "${{ github.event_name }}" = "schedule" ]]; then
+          date=$(echo ${{ steps.tag.outputs.tag }} | cut -c2-11)
+          time=$(echo ${{ steps.tag.outputs.tag }} | cut -c13-)
+          if (gh release list | cut -f3 | grep -q  $date); then
+            gh release create --draft "${{ steps.tag.outputs.tag }}" --title "LDView Snapshot $date $time"
+          else
+            gh release create --draft "${{ steps.tag.outputs.tag }}" --title "LDView Snapshot $date"
+          fi
+        elif [[ "${{ github.event_name }}" = "push" ]]; then
+          gh release create --draft "${{ steps.tag.outputs.tag }}" --title "LDView $ver" 
         fi
   build-windows:
     needs: [release]
@@ -42,6 +51,12 @@ jobs:
       uses: actions/checkout@v4
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v2
+    - name: Cache
+      if: github.ref == 'master'
+      uses: actions/cache@v4
+      with:
+        path: Build
+        key: windows
     - name: Build LDView
       shell: cmd
       run: .\build.cmd
@@ -51,6 +66,7 @@ jobs:
 #        msbuild LDView.vcxproj /p:Configuration=Release /p:Platform=win32
 #        "c:\Program Files (x86)\Inno Setup 6\ISCC.exe" LDView.iss
     - name: Upload Setup
+      if: needs.release.outputs.tag != ''
       env:
         GH_TOKEN: ${{ github.token }}
         GH_REPO: ${{ github.repository }}
@@ -63,9 +79,16 @@ jobs:
         uses: actions/checkout@v4
       - name: Install developement packages
         run:  sudo ./QT/docker/install-devel-packages.sh
+      - name: Cache
+        if: github.ref == 'master'
+        uses: actions/cache@v4
+        with:
+          path:  /home/runner/.cache/ccache
+          key: ubuntu
       - name: Build LDView
         run: cd QT ; ./makedeb -qt5
       - name: Upload packages
+        if: needs.release.outputs.tag != ''
         env:
           GH_TOKEN: ${{ github.token }}
           GH_REPO: ${{ github.repository }}
@@ -82,9 +105,16 @@ jobs:
         run:  sudo ./QT/docker/install-devel-packages.sh
       - name: Install gh package
         run:  sudo dnf install -y gh
+      - name: Cache
+        if: github.ref == 'master'
+        uses: actions/cache@v4
+        with:
+          path: /github/home/.cache/ccache
+          key: fedora
       - name: Build LDView
         run:  cd QT ; mkdir -p ~/rpmbuild/{BUILD,RPMS,SOURCES,SPECS,SRPMS} ; ./makerpm
       - name: Upload packages
+        if: needs.release.outputs.tag != ''
         env:
           GH_TOKEN: ${{ github.token }}
           GH_REPO: ${{ github.repository }}
@@ -100,7 +130,13 @@ jobs:
       - name: Install gh package
         run: |
           zypper ar https://cli.github.com/packages/rpm/gh-cli.repo
-          zypper in -y gh || true
+          zypper in -y gh ccache || true
+      - name: Cache
+        if: github.ref == 'master'
+        uses: actions/cache@v4
+        with:
+          path: /github/home/.cache/ccache
+          key: appimage
       - name: Checkout
         uses: actions/checkout@v3
       - name: Build LDView
@@ -110,6 +146,7 @@ jobs:
           export APPIMAGE_EXTRACT_AND_RUN=1
           ./appimage.sh
       - name: Upload packages
+        if: needs.release.outputs.tag != ''
         env:
           GH_TOKEN: ${{ github.token }}
           GH_REPO: ${{ github.repository }}
@@ -126,9 +163,16 @@ jobs:
         run:  ./QT/docker/install-devel-packages.sh
       - name: Install gh package
         run:  apt-get install -y gh
+      - name: Cache
+        if: github.ref == 'master'
+        uses: actions/cache@v4
+        with:
+          path: /github/home/.cache/ccache
+          key: debian
       - name: Build LDView
         run: cd QT ; ./makedeb -qt5
       - name: Upload packages
+        if: needs.release.outputs.tag != ''
         env:
           GH_TOKEN: ${{ github.token }}
           GH_REPO: ${{ github.repository }}
@@ -144,7 +188,13 @@ jobs:
       - name: Install developement packages
         run:  ./QT/docker/install-devel-packages.sh
       - name: Install gh package
-        run:  pacman -Sy --noconfirm github-cli
+        run:  pacman -Sy --noconfirm github-cli ccache
+      - name: Cache
+        if: github.ref == 'master'
+        uses: actions/cache@v4
+        with:
+          path: /github/home/.cache/ccache
+          key: arch
       - name: Build LDView
         run: |
           cd QT
@@ -157,6 +207,7 @@ jobs:
           sed -i 's/ldview(/ldview-qt6(/' PKGBUILD
           sudo -u nobody makepkg -ef
       - name: Upload packages
+        if: needs.release.outputs.tag != ''
         env:
           GH_TOKEN: ${{ github.token }}
           GH_REPO: ${{ github.repository }}
@@ -172,13 +223,20 @@ jobs:
       - name: Install developement packages
         run:  ./QT/docker/install-devel-packages.sh
       - name: Install gh package
-        run:  apk add github-cli
+        run:  apk add github-cli ccache
+      - name: Cache
+        if: github.ref == 'master'
+        uses: actions/cache@v4
+        with:
+          path: /github/home/.cache/ccache
+          key: alpine
       - name: Build LDView
         run: |
           cd QT
           abuild-keygen -a -n -i
           abuild -F
       - name: Upload packages
+        if: needs.release.outputs.tag != ''
         env:
           GH_TOKEN: ${{ github.token }}
           GH_REPO: ${{ github.repository }}
@@ -192,12 +250,13 @@ jobs:
       - name: Build LDView
         run: cd MacOSX/LDView ; xcodebuild ; ./builddmg.sh build/Release/LDView.app
       - name: Upload packages
+        if: needs.release.outputs.tag != ''
         env:
           GH_TOKEN: ${{ github.token }}
           GH_REPO: ${{ github.repository }}
         run:  gh release upload "${{ needs.release.outputs.tag }}" MacOSX/LDView/distrib/LDView*.dmg
   cleanup:
-    if: github.event_name != 'push'
+    if: github.event_name == 'schedule'
     needs:
       - release
       - build-windows
@@ -212,11 +271,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Publish
-        env:
-          GH_TOKEN: ${{ github.token }}
-          GH_REPO: ${{ github.repository }}  
-        run: gh release edit "${{ needs.release.outputs.tag }}" --draft=false --prerelease
+#      - name: Publish
+#        env:
+#          GH_TOKEN: ${{ github.token }}
+#          GH_REPO: ${{ github.repository }}  
+#        run: gh release edit "${{ needs.release.outputs.tag }}" --draft=false --prerelease
       - name: Remove old releases
         env:
           GH_TOKEN: ${{ github.token }}
@@ -224,4 +283,4 @@ jobs:
         run: |
           gh release list |cut -f3|grep -v "${{ needs.release.outputs.tag }}"| grep -E 'v[0-9]{4}-[0-9]{2}-[0-9]{2}\.[0-9]{2}:[0-9]{2}:[0-9]{2}'|sort -nr
           gh release list |cut -f3|grep -v "${{ needs.release.outputs.tag }}"| grep -E 'v[0-9]{4}-[0-9]{2}-[0-9]{2}\.[0-9]{2}:[0-9]{2}:[0-9]{2}'|sort -nr|tail +2|\
-          (while read tag ; do echo gh release delete -y --cleanup-tag $tag ; done)
+          (while read tag ; do gh release delete -y $tag ; done)
