--- a/QT/docker/Dockerfile-centos_8
+++ b/QT/docker/Dockerfile-centos_8
@@ -1,5 +1,5 @@
 FROM centos:8
-MAINTAINER Peter Bartfai pbartfai@stardust.hu
+#MAINTAINER Peter Bartfai pbartfai@stardust.hu
 
 ADD install-devel-packages.sh /
 RUN ./install-devel-packages.sh
