--- a/QT/docker/Dockerfile-ubuntu_latest
+++ b/QT/docker/Dockerfile-ubuntu_latest
@@ -1,5 +1,5 @@
 FROM ubuntu:latest
-MAINTAINER Peter Bartfai pbartfai@stardust.hu
+#MAINTAINER Peter Bartfai pbartfai@stardust.hu
 
 ARG LDVIEW_BRANCH=master
 ENV DEBIAN_FRONTEND=noninteractive
