--- a/QT/docker/Dockerfile-mageia_7
+++ b/QT/docker/Dockerfile-mageia_7
@@ -1,5 +1,5 @@
 FROM mageia:7
-MAINTAINER Peter Bartfai pbartfai@stardust.hu
+#MAINTAINER Peter Bartfai pbartfai@stardust.hu
 
 ADD install-devel-packages.sh /
 RUN ./install-devel-packages.sh
