--- a/QT/docker/Dockerfile-mageia_8
+++ b/QT/docker/Dockerfile-mageia_8
@@ -1,5 +1,5 @@
 FROM mageia:8
-MAINTAINER Peter Bartfai pbartfai@stardust.hu
+#MAINTAINER Peter Bartfai pbartfai@stardust.hu
 
 ARG LDVIEW_BRANCH=master
 ADD install-devel-packages.sh /
