--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,12 +8,12 @@ on:
 #  - cron: '0 10 * * *'
 
 jobs:
-  release:
+  prepare:
     runs-on: ubuntu-latest
     outputs:
       tag: ${{ steps.tag.outputs.tag }}
     steps:
-    - uses: actions/checkout@v5
+    - uses: actions/checkout@v6
     - name: Set tag name
       id: tag
       run: |
@@ -44,11 +44,11 @@ jobs:
           gh release create --draft "${{ steps.tag.outputs.tag }}" --title "LDView $ver" 
         fi
   build-windows:
-    needs: [release]
+    needs: [prepare]
     runs-on: windows-2025
     steps:
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@v6
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v2
     - name: Cache
@@ -74,11 +74,11 @@ jobs:
         GH_REPO: ${{ github.repository }}
       run:  gh release upload "${{ needs.release.outputs.tag }}" Setup\LDView*.exe
   build-ubuntu:
-    needs: [release]
+    needs: [prepare]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Install developement packages
         run:  sudo ./QT/docker/install-devel-packages.sh
       - name: Cache
@@ -96,13 +96,13 @@ jobs:
           GH_REPO: ${{ github.repository }}
         run:  gh release upload "${{ needs.release.outputs.tag }}" QT/ldview-*.deb
   build-fedora:
-    needs: [release]
+    needs: [prepare]
     runs-on: ubuntu-latest
     container:
       image: fedora:latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Install developement packages
         run:  sudo ./QT/docker/install-devel-packages.sh
       - name: Install gh package
@@ -122,7 +122,7 @@ jobs:
           GH_REPO: ${{ github.repository }}
         run:  gh release upload "${{ needs.release.outputs.tag }}" /github/home/rpmbuild/RPMS/*/ldview*.rpm
   build-appimage:
-    needs: [release]
+    needs: [prepare]
     runs-on: ubuntu-latest
     container:
       image: opensuse/leap:15.4
@@ -140,7 +140,7 @@ jobs:
           path: /github/home/.ccache
           key: appimage
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v6
       - name: Build LDView
         run: |
           cd QT
@@ -155,13 +155,13 @@ jobs:
           GH_REPO: ${{ github.repository }}
         run:  gh release upload "${{ needs.release.outputs.tag }}" QT/LDView*.AppImage
   build-debian:
-    needs: [release]
+    needs: [prepare]
     runs-on: ubuntu-latest
     container:
       image: debian:latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Install developement packages
         run:  ./QT/docker/install-devel-packages.sh
       - name: Install gh package
@@ -181,13 +181,13 @@ jobs:
           GH_REPO: ${{ github.repository }}
         run:  gh release upload "${{ needs.release.outputs.tag }}" QT/ldview-*.deb
   build-arch:
-    needs: [release]
+    needs: [prepare]
     runs-on: ubuntu-latest
     container:
       image: archlinux:latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Install developement packages
         run:  ./QT/docker/install-devel-packages.sh
       - name: Install gh package
@@ -219,13 +219,13 @@ jobs:
           GH_REPO: ${{ github.repository }}
         run:  gh release upload "${{ needs.release.outputs.tag }}" QT/ldview*pkg.tar.*
   build-alpine:
-    needs: [release]
+    needs: [prepare]
     runs-on: ubuntu-latest
     container:
       image: alpine:latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Install developement packages
         run:  ./QT/docker/install-devel-packages.sh
       - name: Install gh package
@@ -250,10 +250,10 @@ jobs:
         run:  gh release upload "${{ needs.release.outputs.tag }}" /github/home/packages/ldview/*/ldview*.apk
   build-mac:
     runs-on: macos-latest
-    needs: [release]
+    needs: [prepare]
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Cache
         if: endsWith(github.ref, '/master')
         uses: actions/cache@v4
@@ -273,7 +273,7 @@ jobs:
   cleanup:
     if: github.event_name == 'schedule'
     needs:
-      - release
+      - prepare
       - build-windows
       - build-ubuntu
       - build-fedora
@@ -285,7 +285,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 #      - name: Publish
 #        env:
 #          GH_TOKEN: ${{ github.token }}
